--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 plymouth (0.9.0-9) UNRELEASED; urgency=medium
 
+  [ Laurent Bigonville ]
   * debian/control: Add a dependency against init-system-helpers as we are
     explicitly using deb-systemd-helper in the plymouth postinst script
     (Closes: #767937)
@@ -13,7 +14,13 @@ plymouth (0.9.0-9) UNRELEASED; urgency=medium
   * Enable I/O multiplexing functionality of plymouth by default as soon as
     the main package is installed. (Closes: #768329)
 
- -- Laurent Bigonville <bigon@debian.org>  Mon, 10 Nov 2014 11:38:11 +0100
+  [ Sjoerd Simons ]
+  * debian/patches/debian/patches/utils-Don-t-create-unix-sockets-non-blocking.patch:
+    + Added. Don't open unix socket connections as non-blocking as the read
+    function assume blocking sockets. Fixes plymouth failing to query the
+    password from the user  (Closes: #763276)
+
+ -- Sjoerd Simons <sjoerd@debian.org>  Sat, 15 Nov 2014 17:50:48 +0100
 
 plymouth (0.9.0-8) unstable; urgency=medium
 
