Support the distribution default theme from plymouthd.default being a symlink to an existing theme

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 plymouth (0.9.2-6) UNRELEASED; urgency=medium
 
   * debian/watch: Bump to version 4 and use the macro's
+  * Support the distribution default theme from plymouthd.default
+    being a symlink to an existing theme.
 
  -- Laurent Bigonville <bigon@debian.org>  Thu, 24 Aug 2017 15:14:50 +0200
 
